apps/plantsuite/account/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: account
          image: plantsuite.azurecr.io/plantsuite-account:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: appsettings
              readOnly: true
              mountPath: /app/appsettings.json
              subPath: appsettings.json
      volumes:
        - name: appsettings
          configMap:
            name: account-appsettings
            items:
              - key: appsettings.json
                path: appsettings.json
      imagePullSecrets:
        - name: plantsuite-cr
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
